# Finam_Task

./: .gitignore  CLAUDE.md  Dockerfile  KAGGLE_SETUP.md  README.md  analyzed_conversations_groq.json  baseline.ipynb  baseline_new.ipynb  config.py  processing_progress_groq.json  pyproject.toml
data/: anonymized_dialogs.xlsx
docs/: AGENT_SYSTEM_OVERVIEW.md  PIPELINE_OVERVIEW.md  TASK.md  conv_refactor.md
docs/other/: AGENT_LIST.md  analysis_goals.md  data_presentation.md
utils/: conv_processor.py  fill_agent_types.py  llm.py  llm_local.py  problem_eda.py  processor.py
utils/conv/: conversation.py  parser.py
utils/qroq/: groq_mapper.py  groq_processor.py
web_report/: README.md  app.py  utils.py
web_report/pages/: __init__.py  agent_performance.py  category_analysis.py  functional_analysis.py  overview.py  problems_analysis.py  ux_analysis.py
